--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <main class="main-content">
         <div class="image-grid">
             <div class="image-card">
-                <img src="images/image1.jpg" alt="Image 1" class="card-image">
-                <p class="image-description">Your first image description</p>
+                <img src="images/image1.jpg.png" alt="Image 1" class="card-image">
+                <p class="image-description">MIST logo</p>
             </div>
             <div class="image-card">
-                <img src="images/image2.jpg" alt="Image 2" class="card-image">
-                <p class="image-description">Your second image description</p>
+                <img src="images/image2.jpg.png" alt="Image 2" class="card-image">
+                <p class="image-description">MIST logo</p>
             </div>
             <div class="image-card">
-                <img src="images/image3.jpg" alt="Image 3" class="card-image">
-                <p class="image-description">Your third image description</p>
+                <img src="images/image2.jpg.png" alt="Image 3" class="card-image">
+                <p class="image-description">>MIST logo</p>
             </div>
         </div>
 
